# Forex_App

./: CMakeLists.txt  Main.qml  README.md  imageResource.qrc  imageResourceFile.qrc  main.cpp  myFunctions.js  scrapFunctions.qrc  stockinformation.cpp  stockinformation.h
content/: EntityBand.qml  FinEntity.qml  FinViewBottom.qml  FinViewTop.qml  StockCanvas.qml  StockDisplay.qml  StockInfoBelt.qml  StockInfoBlock.qml  StockLegend.qml  myImages.qrc
